# arc-agi-2025

./: .gitignore  20250924_121541_gpt-oss-120b_arc-prize-2025_evaluation.json  20250924_121553_gpt-oss-20b_arc-prize-2025_evaluation.json  20250924_130604_gpt-4.1-mini_arc-prize-2024_training.json  20250924_130838_gpt-oss-20b_arc-prize-2024_training.json  20250924_131509_gpt-oss-20b_arc-prize-2025_evaluation.json  20250924_133434_google_gemini-2.5-flash_arc-prize-2025_evaluation.json  CLAUDE.md  README.md  analyze_dataset_overlap.py  analyze_tasks.py  check_eval_overlap.py  compare_model_results.py  create_subsets.py  full_output.json  gpt-5-mini-manual.json  gpt-5-mini-manual_augmented.json  install_claude.sh  pyproject.toml  pytest.ini  similarity.ipynb  soar_arc_training_solution_counts.json  temp_ipynb_soar_code.py  test_output.json  train-5.json  training_hard_5_pretrain_ERROR.json  validate_parquet.py
llm-python/: README.md  create_grids_only_dataset.py  create_simple_dataset.py  create_soar_dataset.py  experiment_notes.md  generate_training_data.py  prompt_loader.py  pyproject.toml  read_log_stats.py  run_arc_tasks.py  run_arc_tasks_soar.py  task_loader.py  test_real_arc_scenario.py  visualize_task_evolution.py
llm-python/archive/: analyze_pattern_learning.py  run_arc_tasks.py  test_openrouter_direct.py  visual_comparison_table.py  visualize_task_evolution.py
llm-python/fine-tuning/: Qwen3-ARC-AGI-2-16-jul-no-outputs.ipynb  Qwen3-ARC-AGI-2-21-jul.ipynb  Qwen3-ARC-AGI-2-22-jul.ipynb  Qwen3-ARC-AGI-2-23-jul-C.ipynb  Qwen3-ARC-AGI-2-23-jul.ipynb  README.md  finetune_soar_qwen3_4b.ipynb  finetune_soar_qwen3_4b_v2.ipynb  generate_soar_data.ipynb  unsloth_arc_finetuning.ipynb  unsloth_arc_finetuning_soar.ipynb
llm-python/logs/: 20250703_120535_6150a2bd.json  20250703_120535_summary_arc-agi-1_shortest_1.json  20250703_120547_6150a2bd.json  20250703_120842_6150a2bd.json  20250703_120844_d631b094.json  20250703_120846_d037b0a7.json  20250703_120850_5582e5ca.json  20250703_120856_a85d4709.json  20250703_120913_ed36ccf7.json  20250703_120951_6150a2bd.json  20250703_120959_e9afcf9a.json  20250703_121000_5582e5ca.json  20250703_121009_ed36ccf7.json  20250703_121011_74dd1130.json  20250703_121011_summary_arc-agi-2_shortest_10.json  20250703_121702_summary_arc-agi-1_shortest_1.json  20250703_123749_6150a2bd_responses.json  20250703_123810_6150a2bd_responses.json  20250703_123810_summary_arc-agi-1_shortest_1_responses.json  20250703_124534_6150a2bd.json  20250703_124540_d631b094.json  20250703_124543_d037b0a7.json  20250703_124548_5582e5ca.json  20250703_124550_44f52bb0.json  20250703_124552_a85d4709.json  20250703_124554_ed36ccf7.json  20250703_124557_74dd1130.json  20250703_124603_3c9b0459.json  20250703_124637_d631b094.json  20250703_125154_summary_arc-agi-1_shortest_1.json  20250703_125255_6150a2bd.json  20250703_125330_6150a2bd.json  20250703_125714_summary_arc-agi-1_shortest_1_responses.json  20250703_130230_summary_arc-agi-1_shortest_1.json  20250703_130307_6150a2bd.json  20250703_130406_6150a2bd.json  20250703_130437_6150a2bd.json  20250703_130437_summary_arc-agi-1_shortest_10.json  20250703_130650_6150a2bd.json  20250703_130735_6150a2bd.json  (+19617 more)
llm-python/progdb/: code.py  explore.ipynb  extract_from_logs.py  localdb.py  merge_for_training.py  parquet_to_hf.py  schema.py  validation.py
llm-python/tests/: final_diagnosis.py  test_qwen_thinking_tokens.py
llm-python/training_data/: 15-jul-lorge_train.jsonl  15-jul-lorge_val.jsonl  gemini-synth-arc-agi-1-50-20250723_182345.jsonl  gemini_synth_10_shortest_training_10.jsonl  gemini_synth_10_train.jsonl  gemini_synth_1_train.jsonl  gemini_synth_1_validation.jsonl  jul-15-v2-smol-test_train.jsonl  test_reasoning_fixed.jsonl  test_reasoning_larger.jsonl  training_data_20250716_132532.jsonl  training_data_20250716_142155_train.jsonl  training_data_20250723_095608.jsonl  val_simple_dataset_20250724_130107.jsonl
llm-python/utils/: __init__.py  metrics_utils.py  prompt_utils.py  scoring.py  task_loader.py  transduction.py  voting_utils.py
o3-tools/: Qwen3-ARC-AGI-2.ipynb  README.md  analyze_pattern_learning.py  cleanup_logs.py  create_grid_size_distributed_subset.py  debug_single_task.py  experiment_notes.md  find_o3_arc_agi_2_middle_10.py  generate_training_data.py  o3-tools-task.md  pyproject.toml  run_arc_tasks.py  scoring.py  task_loader.py  visualize_task_evolution.py
o3-tools/logs/: 20250703_120547_summary_arc-agi-1_shortest_1.json  20250703_120800_6150a2bd.json  20250703_120800_summary_arc-agi-1_shortest_1.json  20250703_120815_summary_arc-agi-1_shortest_1.json  20250703_120839_833966f4.json  20250703_120848_e9afcf9a.json  20250703_120853_44f52bb0.json  20250703_120916_74dd1130.json  20250703_120916_summary_arc-agi-2_shortest_10.json  20250703_120946_833966f4.json  20250703_120954_d631b094.json  20250703_120956_d037b0a7.json  20250703_121003_44f52bb0.json  20250703_121005_a85d4709.json  20250703_121549_6150a2bd.json  20250703_121549_summary_arc-agi-1_shortest_1.json  20250703_121702_6150a2bd.json  20250703_121710_6150a2bd.json  20250703_121710_summary_arc-agi-1_shortest_1.json  20250703_123904_6150a2bd_responses.json  20250703_123904_summary_arc-agi-1_shortest_1_responses.json  20250703_124546_e9afcf9a.json  20250703_124603_summary_arc-agi-1_shortest_10.json  20250703_124640_d037b0a7.json  20250703_124642_e9afcf9a.json  20250703_124644_5582e5ca.json  20250703_124646_44f52bb0.json  (+3859 more)
program-abstraction/: explore.ipynb  pyproject.toml
(+1883 files in other folders)
