[project]
name = "arc-agi-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=4.0.0",
    "docker>=7.1.0",
    "duckdb>=1.3.2",
    "fastapi>=0.116.1",
    "google-genai>=1.28.0",
    "huggingface-hub>=0.33.4",
    "matplotlib>=3.7.0",
    "nomic>=3.5.3",
    "numpy==2.2",
    "openai>=1.93.0",
    "pandas>=2.3.1",
    "pillow>=10.0.0",
    "pip>=25.1.1",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "restrictedpython>=8.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.9.0",
    "types-docker>=7.1.0.20250705",
    "types-requests>=2.32.4.20250611",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "ruff>=0.12.5",
]

