[project]
name = "arc-agi-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "datasets>=3.6.0,<5.0.0",
    "db-dtypes>=1.4.3",
    "docker>=7.1.0",
    "fastapi>=0.116.1",
    "fastparquet>=2024.11.0",
    "google-cloud-bigquery>=3.35.1",
    "google-cloud-storage>=3.2.0",
    "google-genai>=1.28.0",
    "huggingface-hub>=0.33.4",
    "jinja2>=3.1.6",
    "matplotlib>=3.7.0",
    "nomic>=3.5.3",
    "numpy==2.2",
    "openai>=1.93.0",
    "pandas>=2.3.1",
    "pandas-stubs>=2.3.0.250703",
    "pillow>=10.0.0",
    "pip>=25.1.1",
    "pyarrow>=21.0.0",
    "pyarrow-stubs>=20.0.0.20250716",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "restrictedpython>=8.0",
    "ruff>=0.12.7",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tiktoken>=0.9.0",
    "transformers>=4.55.1",
    "types-docker>=7.1.0.20250705",
    "types-requests>=2.32.4.20250611",
    "types-tqdm>=4.67.0.20250809",
    "uvicorn>=0.35.0",
    "wandb>=0.21.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "ruff>=0.12.5",
]
fine-tuning = [
    "unsloth>=2025.8.9; sys_platform == 'linux'",
    "pybase64>=1.3.2",
    "sglang[srt]==0.4.9.post3; sys_platform == 'linux'",
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.30.0",
  "ipython>=9.4.0",
  "ruff>=0.12.5",
]
fine-tuning = [
  "unsloth>=2025.8.9; sys_platform == 'linux'",
  "pybase64>=1.3.2",
  "sglang[srt]==0.4.9.post3; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["papers*", "classification*", "runpod*"]

[tool.setuptools.package-data]
"llm_python" = ["prompt-strings/**/*.txt", "transduction/*.joblib"]

[tool.ty.src]
include = [
    "llm_python/transduction",
    "llm_python/datasets",
    "llm_python/utils",
]
exclude = [
    "**/*.ipynb"
]