[project]
name = "o3-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.7.0",
    "numpy>=2.3.1",
    "openai>=1.93.0",
    "pandas>=2.3.1",
    "pillow>=10.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "tiktoken>=0.9.0",
]
