[project]
name = "program-abstraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.26.0",
    "ipykernel>=6.30.0",
    "ipython>=9.4.0",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "pip>=25.1.1",
]
